force-app/main/default/objects/fmgwoorddmdcst__c/fmgwoorddmdcst__c.object-meta.xml
<CustomObject>
    <label>FMG Work Order Component Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMG Work Order Component Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>