force-app/main/default/objects/fmgwoorddmdcst__c/fields/batchId__c.field-meta.xml
<CustomField>
    <fullName>batchId__c</fullName>
    <label>batchId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>