force-app/main/default/objects/fmgwoorddmdcst__c/fields/fmgwoorddmdcst_sydata__c.field-meta.xml
<CustomField>
    <fullName>fmgwoorddmdcst_sydata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SYDATA - System Transaction Object</label>
    <referenceTo>rstk__sydata__c</referenceTo>
    <relationshipLabel>FMG Work Order Component Details</relationshipLabel>
    <relationshipName>fmgwoorddmdcst</relationshipName>
    <type>Lookup</type>
</CustomField>