force-app/main/default/objects/fmgwoorddmdcst__c/fields/fmgwoorddmdcst_wocst__c.field-meta.xml
<CustomField>
    <fullName>fmgwoorddmdcst_wocst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>rstk__wocst__c</referenceTo>
    <relationshipLabel>FMG Work Order Component Details</relationshipLabel>
    <relationshipName>fmgwoorddmdcst_wocst</relationshipName>
    <type>Lookup</type>
</CustomField>