force-app/main/default/objects/fmgwoorddmdcst__c/fields/fmgwoorddmdcst_woorddmd__c.field-meta.xml
<CustomField>
    <fullName>fmgwoorddmdcst_woorddmd__c</fullName>
    <label>Work Order Component</label>
    <referenceTo>rstk__woorddmd__c</referenceTo>
    <relationshipLabel>FMG Work Order Component Details</relationshipLabel>
    <relationshipName>fmgwoorddmdcst</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>