force-app/main/default/objects/fmgwoorddmdcst__c/fields/fmgwoorddmdcst_woorddmdcst__c.field-meta.xml
<CustomField>
    <fullName>fmgwoorddmdcst_woorddmdcst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Component Detail</label>
    <referenceTo>rstk__woorddmdcst__c</referenceTo>
    <relationshipLabel>FMG Work Order Component Details</relationshipLabel>
    <relationshipName>fmgwoorddmdcst</relationshipName>
    <type>Lookup</type>
</CustomField>