force-app/main/default/objects/fmgwoorddmdcst__c/fields/Issue_Error__c.field-meta.xml
<CustomField>
    <fullName>Issue_Error__c</fullName>
    <formula>fmgwoorddmdcst_sydata__r.rstk__sydata_message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Error</label>
    <type>Text</type>
</CustomField>