force-app/main/default/objects/fmgwoorddmdcst__c/fields/Processing_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Processing_Indicator__c</fullName>
    <formula>TEXT(fmgwoorddmdcst_sydata__r.rstk__sydata_process__c)</formula>
    <label>Processing Indicator</label>
    <type>Text</type>
</CustomField>