force-app/main/default/objects/fmgwoorddmdcst__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>batchId__c</columns>
    <columns>Issue_Error__c</columns>
    <columns>fmgwoorddmdcst_woorddmd__c</columns>
    <columns>fmgwoorddmdcst_woorddmdcst__c</columns>
    <columns>Processing_Indicator__c</columns>
    <columns>fmgwoorddmdcst_sydata__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>